--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     ></script>
   </head>
   <body>
-
     <ion-app>
       <ion-header>
         <ion-toolbar color="primary">
@@ -28,37 +27,66 @@
 
       <ion-content>
         <ion-grid>
-            <ion-row>
-                <ion-col size-md="6" offset-md="3">
-                    <ion-card>
-                        <ion-card-header>
-                          <ion-card-title>New Expense</ion-card-title>
-                        </ion-card-header>
-                        <ion-card-content>
-                          <ion-item>
-                            <ion-input
-                              label="Expense Reason"
-                              label-placement="floating"
-                              placeholder="Enter Reason"
-                              type="text"
-                            ></ion-input>
-                          </ion-item>
-              
-                          <ion-item>
-                            <ion-input
-                              label="Expense Amount"
-                              label-placement="floating"
-                              placeholder="Enter Amount"
-                              type="number"
-                            ></ion-input>
-                          </ion-item>
-                        </ion-card-content>
-                      </ion-card>
-                </ion-col>
-            </ion-row>
+          <ion-row>
+            <ion-col size-md="6" offset-md="3">
+              <ion-card>
+                <ion-card-header>
+                  <ion-card-title>New Expense</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-item>
+                    <ion-input
+                      label="Expense Reason"
+                      label-placement="floating"
+                      placeholder="Enter Reason"
+                      type="text"
+                      id="reason"
+                    ></ion-input>
+                  </ion-item>
+
+                  <ion-item>
+                    <ion-input
+                      label="Expense Amount"
+                      label-placement="floating"
+                      placeholder="Enter Amount"
+                      type="number"
+                      id="amount"
+                    ></ion-input>
+                  </ion-item>
+                  <div class="ion-margin-vertical ion-text-right">
+                  <ion-button fill="outline" color="danger" id="clear"
+                    ><ion-icon slot="start" name="close"></ion-icon>
+                    Clear</ion-button>
+                  
+                  <ion-button id="add"
+                    ><ion-icon slot="start" name="add"></ion-icon>Add
+                    Expense</ion-button>
+                </div>
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size-md="6" offset-md="3">
+                <ion-list id="expenses-list"></ion-list>
+            </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col size-md="6" offset-md="3">
+                <p padding>Total Expenses : ₹ <span id="totalExpenses"></span></p>
+            </ion-col>
+          </ion-row>
         </ion-grid>
-   
       </ion-content>
+      <ion-alert
+        header="A Short Title Is Best"
+        sub-header="A Sub Header Is Optional"
+        message="A message should be a short, complete sentence."
+></ion-alert>
     </ion-app>
+   
+    <script src="app.js"></script>
   </body>
 </html>
